--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/chatbotDB
+spring.datasource.username=dbAdmin
 spring.datasource.password=secretPassword1
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
